dist_man1_MANS=

if BUILD_ELCASHD
  dist_man1_MANS+=elcashd.1
endif

if ENABLE_QT
  dist_man1_MANS+=elcash-qt.1
endif

if BUILD_ELCASH_CLI
  dist_man1_MANS+=elcash-cli.1
endif

if BUILD_ELCASH_TX
  dist_man1_MANS+=elcash-tx.1
endif

if ENABLE_WALLET
if BUILD_ELCASH_WALLET
  dist_man1_MANS+=elcash-wallet.1
endif
endif
